<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="welcome_to_nshoestore">Welcome to\nShoeStore</string>
    <string name="the_best_sneakers_ne_commerce_app">The best Sneakers\ne-commerce app</string>
    <string name="shoestore">ShoeStore</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="don_quot_t_have_an_account">Don\"t have an account?</string>
    <string name="login">Login</string>
    <string name="let_apos_s_fulfill_your_nfashion_needs">Let\'s fulfill your\nfashion needs</string>
    <string name="get_started">Get Started</string>
    <string name="size">Size:</string>
    <string name="brand">Brand:</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_brand_company">Shoe brand (company)</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
</resources>
