<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodel.ShoeListViewModel" />
    </data>
    <!-- ConstraintLayout is used here to set the FAB at the bottom end of screen -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".shoedetail.ShoeDetailFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#9E9E9E"
            app:boxBackgroundColor="#1F222A"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="#9E9E9E"
            app:hintTextColor="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeNameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name"
                android:inputType="textCapSentences|text"
                android:text="@={viewModel.shoeName}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeBrandTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#9E9E9E"
            app:boxBackgroundColor="#1F222A"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="#9E9E9E"
            app:hintTextColor="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeBrandTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_brand_company"
                android:inputType="textCapSentences|text"
                android:text="@={viewModel.shoeBrand}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeSizeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#9E9E9E"
            app:boxBackgroundColor="#1F222A"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="#9E9E9E"
            app:hintTextColor="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeBrandTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeSizeTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_size"
                android:inputType="numberDecimal"
                android:text="@={viewModel.shoeSize + ``}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#9E9E9E"
            app:boxBackgroundColor="#1F222A"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="#9E9E9E"
            app:hintTextColor="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeSizeTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeDescriptionTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textCapSentences|text"
                android:text="@={viewModel.shoeDescription}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/white"
            android:onClick="@{() -> viewModel.createShoe()}"
            android:text="@string/save"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/shoeDescriptionTextInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@id/shoeDescriptionTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/shoeDescriptionTextInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>